--- a/res/xml/widget_4x2.xml
+++ b/res/xml/widget_4x2.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="294dip"
     android:minHeight="144dip"
-    android:initialLayout="@layout/wedgit_main"
+    android:initialLayout="@layout/wedgit_4x2"
     android:updatePeriodMillis="0">
 </appwidget-provider>
