--- a/res/layout/wedgit_layout_4x2.xml
+++ b/res/layout/wedgit_layout_4x2.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parentLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:clickable="true" >
 
     <TextView
         android:id="@+id/dateText"
